[workspace]
members = [
    "ccadb-csv",
    "ccadb-csv-fetch",
    "ccadb-crl-fetch",
]
resolver = "2"

[workspace.dependencies]
csv = "1"
futures-util = "0.3"
indicatif = "0.17"
reqwest = { version = "0.12", default-features = false }
rustls = { version = "0.23", default-features = false, features = ["std", "logging", "tls12"] }
rustls-webpki = "0.102"
serde = "1"
serde_json = "1"
tokio = "1"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
ureq = { version = "2.10", default-features = false }
url = "2"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
