[package]
name = "ccadb-crl-fetch"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "Utility for mass-downloading CRLs from Common CA Database (CCADB) CSV reports."
repository = "https://github.com/cpu/ccadb-utils"
keywords = ["ccadb", "pki", "tls", "crls", "revocation"]

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
tokio-stream = "0.1"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "trust-dns"] }
url = "2"
serde_json = "1"
indicatif = "0.17"
ccadb-csv = { path = "../ccadb-csv", version = "0.2"}

