[package]
name = "ccadb-crl-fetch"
version = "0.2.0"
edition = "2021"
license = "MPL-2.0"
description = "Utility for mass-downloading CRLs from Common CA Database (CCADB) CSV reports."
repository = "https://github.com/cpu/ccadb-utils"
keywords = ["ccadb", "pki", "tls", "crls", "revocation"]

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs"] }
tokio-stream = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls", "trust-dns"] }
url = { workspace = true }
serde_json = { workspace = true }
indicatif = { workspace = true }
ccadb-csv = { path = "../ccadb-csv", version = "0.5" }

