[package]
name = "ccadb-csv-fetch"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "Utility for downloading CSV reports from the Common CA Database (CCADB)."
repository = "https://github.com/cpu/ccadb-utils"
keywords = ["ccadb", "pki", "tls"]

[dependencies]
ureq = { version = "2.8.0", default-features = false, features = [ "tls", "rustls" ] }
rustls = "0.21.10"
rustls-webpki = "0.102.1"
indicatif = "0.17.7"
ccadb-csv = { path = "../ccadb-csv", version = "0.2.0"}
