[package]
name = "ccadb-csv-fetch"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "Utility for downloading CSV reports from the Common CA Database (CCADB)."
repository = "https://github.com/cpu/ccadb-utils"
keywords = ["ccadb", "pki", "tls"]

[dependencies]
ureq = { version = "2.10", default-features = false, features = [ "tls" ] }
rustls = "0.22"
rustls-webpki = "0.102"
indicatif = "0.17"
ccadb-csv = { path = "../ccadb-csv", version = "0.3"}
