[package]
name = "ccadb-csv-fetch"
version = "0.2.0"
edition = "2021"
license = "MPL-2.0"
description = "Utility for downloading CSV reports from the Common CA Database (CCADB)."
repository = "https://github.com/cpu/ccadb-utils"
keywords = ["ccadb", "pki", "tls"]

[dependencies]
ureq = { workspace = true, features = ["tls"] }
rustls = { workspace = true }
rustls-webpki = { workspace = true }
indicatif = { workspace = true }
ccadb-csv = { path = "../ccadb-csv", version = "0.4" }
