[package]
name = "ccadb-csv"
version = "0.4.0"
edition = "2021"
license = "MPL-2.0"
description = "Thin wrappers around Common CA Database (CCADB) CSV report content."
repository = "https://github.com/cpu/ccadb-utils"
keywords = ["ccadb", "pki", "tls"]

[dependencies]
csv = { workspace = true }
serde = { workspace = true, features = ["derive"] }
