[package]
name = "ccadb-webpki-roots"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "Utility for generating webpki trusted roots from the Common CA Database (CCADB)."
repository = "https://github.com/cpu/ccadb-utils"
keywords = ["ccadb", "pki", "tls", "webki"]

[dependencies]
hex = "0.4.3"
num-bigint = "0.4.3"
chrono = "0.4.26"
askama = "0.12.0"
x509-parser = "0.15.0"
rustls-pemfile = "1.0.2"
webpki = { package = "rustls-webpki", version = "0.100.0" }
ccadb-csv = { path = "../ccadb-csv", version = "0.1.0"}